testsuite/tests/properties/invalid_dflt_arg_val/missing_arg_2.lkt
import common

class Example: FooNode {
    @export fun p(a: Bool, b: Bool=true): Bool = a and b
    @export fun calling(): Bool = node.p(b=true)
}
